# biblical-lm-pretrain

./: .gitignore  LEARNING_PLAN.md  README.md  app.py  pyproject.toml
scripts/: download_data.py  generate.py  prepare_data.py  train.py  train_tokenizer.py
src/biblical_lm/: __init__.py  config.py  dataset.py  generate.py  model.py
